--- a/themes/bridgepdx/layouts/application.html.erb
+++ b/themes/bridgepdx/layouts/application.html.erb
@@ -58,8 +58,8 @@
        <div class='inner_container'>
           <h1 id="site-title"><span><a href="<%= remote_base %>" title="<%= SETTINGS.organization %>" rel="home"><%= SETTINGS.organization %></a></span></h1>
           <div id="site-description">
-             <h2>The conference for open source citizens</h2>
-             <p id='conference-date-location'>June 17&ndash;19, 2009 <span class='separator'>|</span> Portland, Oregon</p>
+             <h2>The conference for Indian Ruby Gems</h2>
+             <p id='conference-date-location'>Jan 1&ndash;4, 2010 <span class='separator'>|</span> Bangalore, India</p>
           </div>
         </div>
       </div>
@@ -234,7 +234,7 @@
       </div><!-- container -->
 
     <div id="footer">
-      &copy; 2008&ndash;2009 Open Source Bridge Foundation | <a href='/contact-us'>Contact Us</a>
+      &copy; 2009&ndash;2010 OSB Foundation & RubyConf India| <a href='/contact-us'>Contact Us</a>
     </div>
 
   </div><!--wrapper -->
