Defaulting to bridgepdx pending fix to default theme

--- a/themes/bridgepdx/layouts/application.html.erb
+++ b/themes/bridgepdx/layouts/application.html.erb
@@ -58,7 +58,7 @@
        <div class='inner_container'>
           <h1 id="site-title"><span><a href="<%= remote_base %>" title="<%= SETTINGS.organization %>" rel="home"><%= SETTINGS.organization %></a></span></h1>
           <div id="site-description">
-             <h2>The conference for Indian Ruby Gems</h2>
+             <h2>The conference for Indian Ruby hackers</h2>
              <p id='conference-date-location'>Jan 1&ndash;4, 2010 <span class='separator'>|</span> Bangalore, India</p>
           </div>
         </div>
