--- a/css/screen.css
+++ b/css/screen.css
@@ -87,20 +87,17 @@ background: transparent url(../images/devider.png) no-repeat 0 0;
 p {
 	color: #FEC6A2;
 }
-
 ul.news {
 	margin-bottom: -1em;
+	margin-left:1em;
 }
-
 ul.news li {
 	color: #FEC6A2;
 	padding-bottom: 1em;
 }
-
 #about p {
 	margin-bottom: 1.5em;
 }
-
 .blurb address, .blurb div {
 	color:#000000;
 	float:left;
@@ -143,15 +140,25 @@ ul.news li {
 	float:left;
 	margin-right:15px;
 }
-.nav li a, .nav li a:visited {
+.nav li a {
 	color:#FFDBC1;
 	display:block;
 	padding:10px;
 	text-decoration:none;
 }
+.nav li a:visited {
+	color:#FFDBC1;
+}
 .nav li a:hover {
 	text-decoration: underline;
 }
+.nav li#speakers a {
+	padding: 10px 15px;
+}
+.nav li#twitter {
+	border-right: 1px solid #4d2720;
+}
+
 /*
 .content,
 .sidebar .content{
@@ -213,7 +220,7 @@ h4 {
 }
 .sidebar h4 {
 	padding-left:18px;
-	text-shadow:3px 3px 10px;
+	text-shadow:2px 2px 10px;
 }
 .proposals {
 	padding-top: 1em;
@@ -297,265 +304,6 @@ h4 {
 .sidebar2 h4 {
 	margin-top: 15px;
 }
-/* ADD ONS */ 
-.badges {
-}
-.badge {
-	padding-top: 1em;<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US">
-<head profile="http://gmpg.org/xfn/11">
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>RubyConf India 2010: Get involved</title>
-<meta name="robots" content="index,follow" />
-<meta name="author" content="Rajveer Singh Rathore" />
-<meta name="description" content="India's first RubyConf is happening in Bangalore in March this year. RubyConf India is co-presented by ThoughtWorks and RubyCentral." />
-<meta name="keywords" content="" />
-<link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
-<link rel="stylesheet" href="css/screen.css" type="text/css" media="screen" />
-<!--[if IE 6]>
-	<link rel="stylesheet" href="css/ie6.css" type="text/css" media="screen" />
-<![endif]-->
-</head>
-<body>
-<div class="wrapper">
-  <div id="menuContainer" class="nav">
-    <ul id="menu">
-      <li class="first" id="home"><a href="index.html"><span>Home</span></a></li>
-      <li id="register"><a href="http://rubyconfindia.doattend.com"><span>Register</span></a></li>
-      <li id="program"><a href="program.html"><span>Program</span></a></li>
-      <li id="blog"><a href="badges.html"><span>Blog badges</span></a></li>
-      <li id="twitter"><a href="http://twitter.com/rubyconfindia" target="_blank"><span>Twitter</span></a></li>
-      <li class="last" id="contact"><a href="contact.html"><span>Contact</span></a></li>
-    </ul>
-  </div>
-  <div class="header">
-    <h1 class="logo">Ruby Conference India 2010 - Logo</h1>
-    <div class="blurb">
-      <h2>RubyConf India 2010</h2>
-      <blockquote>India's first RubyConf is happening in Bangalore in March 2010. RubyConf India is presented by the <span>Ruby Community</span> in India and supported by <a href="http://www.rubycentral.org"><span>RubyCentral</span></a> and the <span>Innovation & Technology Trust</span>.</blockquote>
-      <address>
-      Royal Orchid Hotel, Bangalore
-      </address>
-      <div>20th &amp; 21st March</div>
-    </div>
-    <div class="register"> <a href="http://rubyconfindia.doattend.com">Register Now</a> </div>
-  </div>
-  <div class="content wide_content">
-    <h2>Program</h2>
-    <p>The keynote addresses   and list of proposals that have made it to this year’s RubyConf India   2010 are listed below. A detailed schedule will be put up shortly:</p>
-    <p>&nbsp;</p>
-    <table >
-      <thead>
-        <tr>
-          <th colspan="4" valign="middle">Day 1 - Mar 20th - Sat</th>
-          <th colspan="4" valign="middle">Day 2 - Mar 21st - Sun</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr  class="odd">
-          <td valign="middle"><p align="right">10:00</p></td>
-          <td valign="middle"><p align="right">10:10</p></td>
-          <td colspan="2" valign="middle"><p>Kick-off by Roy Singham</p></td>
-          <td valign="middle"><p align="right">10:00</p></td>
-          <td valign="middle"><p align="right">10:45</p></td>
-          <td colspan="2" valign="middle"><p>Keynote by Ola Bini</p></td>
-        </tr>
-        <tr >
-          <td valign="middle"><p align="right">10:15</p></td>
-          <td valign="middle"><p align="right">11:00</p></td>
-          <td colspan="2" valign="middle"><p>Keynote by Chad Fowler</p></td>
-          <td valign="middle"><p align="right">11:00</p></td>
-          <td valign="middle"><p align="right">11:45</p></td>
-          <td colspan="2" valign="middle"><p>Session by Nick Sieger</p></td>
-        </tr>
-        <tr  class="odd">
-          <td valign="middle"><p align="right">11:15</p></td>
-          <td valign="middle"><p align="right">12:00</p></td>
-          <td valign="middle"><p>Hacking and learning from    Open source Ruby (Open source Rubyisms) - Sreekanth Vadagiri</p></td>
-          <td valign="middle"><p>GlassFish supports    multiple Ruby web frameworks ... really ? - Arun Gupta</p></td>
-          <td valign="middle"><p align="right">12:00</p></td>
-          <td valign="middle"><p align="right">1:00</p></td>
-          <td colspan="2" valign="middle"><p align="center">Lunch</p></td>
-        </tr>
-        <tr  >
-          <td valign="middle"><p align="right">12:00</p></td>
-          <td valign="middle"><p align="right">1:00</p></td>
-          <td colspan="2" valign="middle"><p align="center">Lunch</p></td>
-          <td valign="middle"><p align="right">1:00</p></td>
-          <td valign="middle"><p align="right">1:45</p></td>
-          <td valign="middle"><p>The Big Wave of Indian    Startups - (Almost) Effortless Entrepreneurship - Pradeep Elankumaran</p></td>
-          <td valign="middle"><p>The Taming of the View -    Sarah Taraporewalla</p></td>
-        </tr>
-        <tr  class="odd">
-          <td valign="middle"><p align="right">1:00</p></td>
-          <td valign="middle"><p align="right">1:45</p></td>
-          <td valign="middle"><p>IronRuby: The Ruby &amp;    .NET Love Child&quot; - Ivan Porto Carrero</p></td>
-          <td valign="middle"><p>The Ruby on rails I18n    core API - Neeraj Kumar</p></td>
-          <td valign="middle"><p align="right">2:00</p></td>
-          <td valign="middle"><p align="right">2:45</p></td>
-          <td valign="middle"><p><br />
-              Project Fedena and Why Ruby on Rails - Arvind G S</p></td>
-          <td valign="middle"><p>Let's build a Ruby    Application Server - Vineet Tyagi</p></td>
-        </tr>
-        <tr  >
-          <td valign="middle"><p align="right">2:00</p></td>
-          <td valign="middle"><p align="right">2:45</p></td>
-          <td valign="middle"><p>Ruby on Rails versus    Django - A newbie Web Developer's Perspective - Shreyank Gupta</p></td>
-          <td valign="middle"><p>Ruby OOP - Objects over    Classes - Aman King</p></td>
-          <td valign="middle"><p align="right">3:00</p></td>
-          <td valign="middle"><p align="right">3:45</p></td>
-          <td valign="middle"><p>Managing entropy on long    term Ruby and Rails codebases, or how not to kill a Ruby project in eighteen    months - Sidu Ponnappa &amp; Niranjan Paranjape</p></td>
-          <td valign="middle"><p>MacRuby to the Max -    Brendan G. Lim</p></td>
-        </tr>
-        <tr  class="odd">
-          <td valign="middle"><p align="right">3:00</p></td>
-          <td valign="middle"><p align="right">3:45</p></td>
-          <td valign="middle"><p>Concurrency patterns in    Ruby - Sai Venkatakrishnan</p></td>
-          <td valign="middle"><p>Building crossplatform    Mobile (Smartphone) Apps with Ruby &amp; HTML - An introduction to  Rhodes - Dasharatham Bitla</p></td>
-          <td valign="middle"><p align="right">4:00</p></td>
-          <td valign="middle"><p align="right">4:45</p></td>
-          <td colspan="2" valign="middle"><p>Placeholder - pending    speaker confirmation</p></td>
-        </tr>
-        <tr  >
-          <td valign="middle"><p align="right">4:00</p></td>
-          <td valign="middle"><p align="right">5:00</p></td>
-          <td valign="middle"><p>Mortal Kombat: Developer    vs. Designer - Kapil Mohan &amp; Arun J</p></td>
-          <td valign="middle"><p>Events, threads and    writing robust client/servers in Ruby - Hemant Kumar</p></td>
-          <td valign="middle"><p align="right">5:00</p></td>
-          <td valign="middle"><p align="right">5:45</p></td>
-          <td colspan="2" valign="middle"><p>Closing note by Roy    Singham</p></td>
-        </tr>
-      </tbody>
-    </table>
-    <!--
-    <table  cellspacing="0" cellpadding="0">
-      <thead>
-        <tr >
-          <th>Proposal Title</th>
-          <th>Speaker</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr class="odd">
-          <td>Keynote     Address by Chad Fowler: Topic to be up shortly</td>
-          <td>Chad Fowler</td>
-        </tr>
-        <tr >
-          <td>Keynote     Address by Ola Bini: Present and Future of Programming Languages</td>
-          <td>Ola Bini</td>
-        </tr>
-        <tr  class="odd">
-          <td>IronRuby:     The Ruby &amp; .Net Love Child</td>
-          <td>Ivan Porto Carrero</td>
-        </tr>
-        <tr >
-          <td>Events,     threads and writing robust client/servers in Ruby</td>
-          <td>Hemant Kumar</td>
-        </tr>
-        <tr  class="odd">
-          <td>GlassFish     supports multiple Ruby web frameworks ... really ?</td>
-          <td>Arun Gupta</td>
-        </tr>
-        <tr >
-          <td>The     Big Wave of Indian Startups - (Almost) Effortless Entrepreneurship</td>
-          <td>Pradeep Elankumaran</td>
-        </tr>
-        <tr  class="odd">
-          <td>Ruby     OOP - Objects over Classes</td>
-          <td>Aman King</td>
-        </tr>
-        <tr >
-          <td>Managing     entropy on long term Ruby and Rails codebases, or how not to kill a     Ruby</td>
-          <td>Sidu Ponnappa and     Niranjan Paranjape</td>
-        </tr>
-        <tr  class="odd">
-          <td>Building     crossplatform Mobile (Smartphone) Apps with Ruby &amp; HTML - An introduction     to  Rhodes</td>
-          <td>Dasharatham Bitla</td>
-        </tr>
-        <tr >
-          <td>Project     Fedena and Why Ruby on Rails</td>
-          <td>Arvind G S</td>
-        </tr>
-        <tr  class="odd">
-          <td>The     Taming of the View </td>
-          <td>Sarah Taraporewalla</td>
-        </tr>
-        <tr >
-          <td>Let's     build a Ruby Application Server</td>
-          <td>Vineet Tyagi</td>
-        </tr>
-        <tr  class="odd">
-          <td>The     Ruby on rails I18n core API</td>
-          <td>Neeraj Kumar</td>
-        </tr>
-        <tr >
-          <td>Mortal     Kombat: Developer vs. Designer</td>
-          <td>Kapil Mohan and Arun     J</td>
-        </tr>
-        <tr  class="odd">
-          <td>MacRuby     to The Max</td>
-          <td>Brendan G. Lim</td>
-        </tr>
-        <tr >
-          <td>Hacking     and learning from Open source Ruby (Open source Rubyisms)</td>
-          <td>Sreekanth Vadagiri</td>
-        </tr>
-      </tbody>
-    </table>
-    -->
-  </div>
-  <div class="sidebar sidebar2">
-    <div class="support"> <a href="http://www.rubycentral.org/" target="_blank"><img src="images/ruby_central_logo_small.png" alt="Ruby Central" title="Supoorted by - Ruby Central" /></a> </div>
-    <div class="sb_content">
-      <h4>Platinum & Technology Sponsor</h4>
-      <div class="sponsor_logos">
-        <ul class="main-sponsor">
-          <li> <a href="http://www.thoughtworks.com/" target="_blank"><img src="images/tw_md.png" alt="Thoughtworks" /></a></li>
-        </ul>
-      </div>
-      <ul class="sponsor_list">
-        <li>
-          <h4>Gold Sponsor</h4>
-          <div class="sponsor_logos">
-            <ul class="co-sponsor">
-              <li> <a href="http://www.castlerockresearch.com/" target="_blank"><img src="images/castle_rock_logo.png" alt="Castle Rock" /></a></li>
-            </ul>
-          </div>
-        </li>
-        <li>
-          <h4>Silver Sponsor</h4>
-          <div class="sponsor_logos">
-            <ul class="co-sponsor">
-              <li> <a href="http://www.mahaswami.com/" target="_blank"><img src="images/mahaswami_logo.png" alt="Mahaswami Software" /></a></li>
-            </ul>
-          </div>
-        </li>
-        <li>
-          <h4>Media Partner</h4>
-          <div class="sponsor_logos">
-            <ul class="co-sponsor">
-              <li> <a href="http://www.siliconindia.com/" target="_blank"><img src="images/siliconindia_logo.png" alt="Silicon India" /></a></li>
-            </ul>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
-</div>
-<div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, RubyConf India Logo Credits: <a href="http://www.richchocolate.com" target="_blank">Rich Chocolate</a></div>
-</div>
-<script type="text/javascript">
-  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-  </script>
-<script type="text/javascript">
-  try {
-  var pageTracker = _gat._getTracker("UA-10855424-1");
-  pageTracker._trackPageview();
-  } catch(err) {}</script>
-</body>
-</html>
-}
 .bg .badge {
 	padding-bottom: 0.5em;
 }
@@ -610,37 +358,74 @@ table th {
 .register a:hover {
 	background-position: 0 -32px;
 }
-
 .support {
 	position: absolute;
 	right: -68px;
 	top: 110px;
 }
-
-ul.sponsor_list 
-{
+ul.sponsor_list {
 	list-style: none;
 	clear: both;
 	float: left;
 }
-
-ul.sponsor_list 
-li {
+ul.sponsor_list li {
 	margin-right: 15px;
 	float: left;
 	width: 250px;
 }
-ul.sponsor_list 
-li h4 {
+ul.sponsor_list li h4 {
 	margin-right: 0;
 	text-align: center;
 	margin-bottom: 15px;
 	margin-right: 0;
 	width: 250px;
-	
 }
-ul.sponsor_list .sponsor_logos
-{
+ul.sponsor_list .sponsor_logos {
 	width: 250px;
 	text-align: center;
+}
+ul.speakers {
+	margin: 20px 0 0 10px;
+}
+ul.speakers li {
+	position: relative;
+	margin-bottom: 2em;
+	border: 1px solid #511A13;
+	background:#2C0B0D;
+	padding: 10px;
+	list-style: none;
+}
+ul.speakers li .spkr_photo {
+	position: absolute;
+	top: -10px;
+	left: -10px;
+	padding: 10px;
+	border: 1px solid #511A13;
+	background: #faf9f5;
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+}
+ul.speakers li .spkr_photo img {
+	border: 1px solid #ccc;
+	border-radius: 1px;
+	-moz-border-radius: 1px;
+	-webkit-border-radius: 1px;
+	box-shadow: 6px 6px #CCC;
+	-moz-box-shadow: 6px 6px #CCC;
+	-webkit-box-shadow: 6px 6px #CCC;
+}
+ul.speakers li .spkr_details {
+	margin-left: 150px;
+}
+ul.speakers li .spkr_details a {
+	color:#C9827C;
+}
+ul.speakers li .spkr_name {
+	font-weight: bold;
+	color:#E96100;
+	margin-bottom: 0.5em;
+}
+ul.speakers li .spkr_desc {
+	min-height: 125px;
 }
