--- a/css/screen.css
+++ b/css/screen.css
@@ -445,6 +445,17 @@ ul.speakers li p {
 	text-align: justify;
 	margin-bottom: 10px;
 }
+ul.speakers li p.presentation {
+	text-align: left;
+}
+ul.speakers li p.presentation em{
+	color:red;
+	font-weight:bold;
+	font-size: 1.1em;
+	text-decoration: underline;
+	line-height: 2em;
+	text-shadow: 1px 1px 2px rgba(255, 80, 0, 0.7);
+}
 ul.speakers li p strong{
 	display: block;
 	margin-bottom: 1em;
@@ -467,4 +478,26 @@ ul.speakers li .spkr_desc p:first-child:first-letter {
 }
 ul.speakers li .spkr_abstract p{
 	color: #fbd9c9;
+}
+ul.speakers li .presentation_links li {
+	-moz-border-radius: 0;
+	-moz-box-shadow: none;
+	background:none ;
+	border: 0;
+	list-style:none;
+	margin-bottom:5px;
+	min-height: 20px;
+	padding: 0;
+	position: static;
+}
+.flash_news {
+	position: absolute;
+	top: 42px;
+	left: 35px;
+}
+.flash_news p a{
+	text-shadow: -2px 2px 3px rgba(0, 0, 0, 0.8);
+	color: #fff;
+	font-size: 1.5em;
+	padding: 5px;
 }
