--- a/2011/css/screen.css
+++ b/2011/css/screen.css
@@ -83,6 +83,26 @@ background: transparent url(../images/devider.png) no-repeat 0 0;
 	padding-left: 12px;
 	white-space: nowrap;
 }*/
+.speaker, .talk_title {
+  color: #FEC6A2;
+  margin-bottom: 10px;
+}
+
+.talk {
+  list-style: none;
+  border-style:solid;
+  border-width:thin;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-top-style:none;
+  border-right-style:none;
+  border-left-style:none;
+}
+
+.speaker_bio, .talk_description {
+  margin-bottom: 10px;
+  font-size: 0.8em;
+}
 
 p {
 	color: #FEC6A2;
@@ -522,4 +542,8 @@ ul.speakers li .presentation_links li {
 	font-weight: bold;
 	
 	padding: 5px;
+}
+
+.bullet_points_talk_description {
+  padding-left: 2.5em;
 }
