--- a/2011/css/screen.css
+++ b/2011/css/screen.css
@@ -102,6 +102,7 @@ background: transparent url(../images/devider.png) no-repeat 0 0;
 .speaker_bio, .talk_description {
   margin-bottom: 10px;
   font-size: 0.8em;
+  margin-left: 1.5em;
 }
 
 p {
