--- a/2011/css/screen.css
+++ b/2011/css/screen.css
@@ -17,9 +17,9 @@ a:hover, a:focus, a:active {
 	text-decoration: none;
 }
 .wrapper {
-	margin: 0 auto 36px;
-	width: 940px;
-	position: relative;
+  margin: 0 auto 36px;
+  width: 940px;
+  position: relative;
 }
 .header {
 	overflow:hidden;
@@ -566,4 +566,212 @@ ul.speakers li .presentation_links li {
 
 .bullet_points_talk_description {
   padding-left: 2.5em;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.highlighted{
+  background-color: #ededed;
+  -webkit-background-size: 10px 10px;
+  -moz-background-size: 2px 2px;
+  background-size: 10px 10px;  
+  
+}
+
+.selected{
+  background-color: #e4c4c4;
+}
+
+.rightArrow{
+  background: transparent url('/images/fancy_nav_right.png') no-repeat 0 0;
+}
+
+.leftArrow{
+  background: transparent url('/images/fancy_nav_left.png') no-repeat 0 0;
+}
+
+
+
+.image-wrapper {
+  height: 100px;
+}
+
+.image-wrapper img {
+  height: 100%;
+}
+
+
+#main{
+  margin: 40px 0 0 0;
+  position: relative;
+}
+
+#left .actions{
+  height: 30px;
+  padding: 10px;
+  background-color: #000;
+  background-color: #8B1417;
+  -moz-border-radius: 15px 0 0 0;
+  border-radius: 15px 0 0 0;
+}
+
+#left{
+  width: 420px;
+  padding: 10px;
+  border-right: 1px solid #4d4d4d;
+  display: inline-block;
+}
+
+#left .actions ul{
+  margin: 0;
+}
+
+#left .actions ul li.contributor &:hover{
+  background-color: #ededed;
+  -webkit-background-size: 10px 10px;
+  -moz-background-size: 2px 2px;
+  background-size: 10px 10px;  
+
+
+}
+
+
+#left .actions ul li.contributor .toggleImage{
+  height: 30px;
+  width: 30px;
+  position: absolute;
+  top: 10px;
+  right: 12px;
+}
+
+#left .actions ul li.contributor{
+  margin: 5px;
+  position: relative;
+  cursor: pointer;
+  border-bottom: 1px dotted #2e2e2e;
+  -moz-border-radius: 15px;
+  border-radius: 15px;
+
+}
+
+#left .actions ul li.contributor .basicDetails{
+  position: absolute;
+  top: 10px;
+  left: 150px;
+  display: inline-block;
+}
+
+
+
+
+
+#right{
+  width: 420px;
+  margin: 0 0 0 20px;
+  position: absolute;
+  left: 480px;
+  top: 0px;
+  height: 400px;
+  padding: 10px;
+}
+#right .header {
+  height: 120px;
+  position: relative;
+  border-bottom: 1px solid #000;
+}
+
+#right .header h1{
+  position: absolute;
+  top: 40px;
+  left: 150px;
+  color: #000;
+}
+
+
+
+
+#container{
+  -moz-box-shadow: 10px 10px 20px #000000;
+  -webkit-box-shadow: 10px 10px 20px #000000;
+  margin: auto;
+  width: 900px;
+  background-color: #e2e2e2;
+  -moz-border-radius: 15px;
+  border-radius: 15px;
+  position: relative;
+  background: url('/images/bgtex.jpg') repeat 0 0;
+}
+
+
+#contributorDetailsSlider .holder .close .content .details{
+  position: absolute;
+  top: 0px;
+  left: 480px;
+  width:400px;
+  height: 500px;
+  padding: 20px;
+  background-color: #ededed;
+  background-image:
+  	-webkit-gradient(linear, 100% 0%, 0% 100%,
+  	from(transparent),
+  	color-stop(0.15, transparent),
+  	color-stop(0.15, #c4c4c4),
+  	color-stop(0.50, #c4c4c4),
+  	color-stop(0.50, transparent),
+  	color-stop(0.65, transparent),
+  	color-stop(0.65, #c4c4c4),
+  	to(#c4c4c4));
+
+  background-image: -moz-linear-gradient(#c4c4c4 50%, transparent 50%, transparent);
+
+  -webkit-background-size: 10px 10px;
+  -moz-background-size: 2px 2px;
+  background-size: 10px 10px;  
+  
+}
+
+#contributorDetailsSlider .holder .close .content{
+  position: relative;
+  margin: auto;
+}
+
+#contributorDetailsSlider .holder .close{
+  position: absolute;
+  top: -11px;
+  left: 435px;
+  z-index: 1001;
+  cursor: pointer;
+}
+#contributorDetailsSlider .holder .open{
+  width: 410px;
+}
+
+#contributorDetailsSlider .holder{
+  position: relative;
+  margin: auto;
+  
+}
+
+#contributorDetailsSlider{
+  position: absolute;
+  top: 0px;
+  left: 430px;
+  width: 100%;
+  z-index: 1000;
+
 }
